# team_acrv_2017

./: LICENSE  README.md  TEAM_ACRV.md
acrv_apc_2017_perception/: .gitignore  CMakeLists.txt  README.md  checklist.md  package.xml
acrv_apc_2017_perception/launch/: run_binary_refinenet_service.launch  run_refinenet_service.launch  run_refinenet_service_remote.launch
acrv_apc_2017_perception/scripts/: refinenet_interface.py  refinenet_test_script.py
acrv_apc_2017_perception/srv/: rgbd_object_proposal.srv
acrv_cameras/acrv_realsense_ros/: CMakeLists.txt  LICENSE  README.md  package.xml
acrv_cameras/acrv_realsense_ros/cfg/realsense/: depth_camera_info.yaml  rgb_hd_camera_info.yaml
acrv_cameras/acrv_realsense_ros/cfg/realsense_backup1/: depth_camera_info.yaml  rgb_hd_camera_info.yaml  serial_number.txt
acrv_cameras/acrv_realsense_ros/cfg/realsense_backup2/: depth_camera_info.yaml  rgb_hd_camera_info.yaml  serial_number
acrv_cameras/acrv_realsense_ros/cfg/realsense_backup3/: depth_camera_info.yaml  rgb_hd_camera_info.yaml
acrv_cameras/acrv_realsense_ros/cfg/realsense_backup4/: depth_camera_info.yaml  rgb_hd_camera_info.yaml  serial_number
acrv_cameras/acrv_realsense_ros/cfg/realsense_wrist/: depth_camera_info.yaml  rgb_camera_info.yaml  rgb_hd_camera_info.yaml
acrv_cameras/acrv_realsense_ros/cfg/realsense_wrist_local/: depth_camera_info.yaml  rgb_hd_camera_info.yaml
acrv_cameras/acrv_realsense_ros/launch/: data_regeneration_server.launch  image_pipeline.launch  image_pipeline_local.launch  image_pipeline_wrist_local.launch  realsense_camera.launch  realsense_camera_arm.launch  realsense_camera_local.launch  realsense_camera_local_backup_1.launch  realsense_camera_local_backup_2.launch  realsense_camera_r200.launch  realsense_camera_r200_arm.launch  realsense_camera_wrist_local.launch  realsense_inpaint.launch
acrv_cameras/acrv_realsense_ros/scripts/: get_grey_scalars_client.py  get_grey_scalars_server.py  regenerate_dataset.py  stereo_calibrate.py  whitebalance.py  whitebalance_class.py  whitebalance_test.py
acrv_cameras/acrv_realsense_ros/src/: acrv_r200_ros.cpp  acrv_realsense_ros.cpp  capture_checkerboard_images.cpp  capture_checkerboard_images_manual.cpp  data_regeneration_server.cpp  get_serial.cpp  realsense_capture_client.cpp  realsense_capture_service.cpp  register_depth.cpp  sr300_r200_combined_service.cpp  test_sr300_r200_combined_service.cpp
acrv_cameras/acrv_realsense_ros/srv/: get_all_images.srv  get_camera_cloud.srv  get_camera_image.srv  get_camera_info.srv  get_scalars.srv
acrv_cameras/acrv_realsense_tools/: .gitignore  CMakeLists.txt  README.md
acrv_cameras/acrv_realsense_tools/scripts/: calibrate_intrinsics.py  flip_images.py  hd_to_old_sd.py  stereo_calibrate.py
acrv_cameras/acrv_realsense_tools/src/: align_depth_to_rgb.cpp  capture_checkerboard_images.cpp  capture_data_structure_one.cpp  capture_data_structure_two.cpp  get_camera_params.cpp
acrv_modified_clones/: .gitignore  README.md
acrv_modified_clones/librealsense/: .gitignore
apc_3d_vision/: CMakeLists.txt  README.md  package.xml
apc_3d_vision/cmake/: CustomPCLConfig.cmake
apc_3d_vision/config/: storage_config.yaml
apc_3d_vision/include/: apc_3d_vision.hpp
apc_3d_vision/launch/: deep_tote_detector.launch  toteCropping.launch
apc_3d_vision/src/: apc_3d_vision.cpp  cropTote.cpp  find_free_space.cpp  image_to_world_node.cpp  octomap_node.cpp  segment_pointcloud_node.cpp  split_labelled_point_cloud_ros_node.cpp  test_find_free_space.cpp  test_octomap_node.cpp
apc_3d_vision/srv/: split_labelled_point_cloud.srv
apc_grasping/: .gitignore  CMakeLists.txt  README.md  package.xml
apc_grasping/include/apc_grasping/: pcl_filters.h
apc_grasping/launch/: cartesian_grasp_candidates.launch  detect_grasp_candidates.launch  extract_pca.launch  grasp_selection_service.launch  image_pipeline.launch  launch_test.launch  realsense_camera.launch
apc_grasping/scripts/: load_pointcloud.py
apc_grasping/src/: cartesian_grasp_candidates.cpp  detect_grasp_candidates.cpp  extract_pca.cpp  fit_cad_model.cpp  grasp_selection.cpp  grasp_selection_test.cpp  pcl_filters.cpp
apc_msgs/: CMakeLists.txt  README.md  package.xml
apc_msgs/action/: DoProposal.action  DoSegmentation.action  FindObjects2D.action
apc_msgs/msg/: AlignedDimensions.msg  BoundingBox.msg  BoundingBoxDepth.msg  Digital.msg  (+10 more)
apc_state_machine/: .gitignore
cartesian_apc/: README.md  record_pose.py
cartesian_apc/cartesian_gazebo/: CMakeLists.txt  package.xml
cartesian_apc/cartesian_gazebo/config/: cartesian_controllers.yaml
cartesian_apc/cartesian_gazebo/launch/: cartesian_gazebo.launch  empty_world.launch
cartesian_apc/cartesian_motor_control/: CMakeLists.txt  package.xml
cartesian_apc/cartesian_motor_control/config/: controllers.yaml  dynamixel.yaml
cartesian_apc/cartesian_motor_control/include/cartesian_motor_control/: cartesian_motor_hw_interface.h
cartesian_apc/cartesian_motor_control/launch/: cartesian_motor_hardware.launch  cartesian_motor_simulation.launch  cartesian_motor_test_trajectory.launch  dynamixels.launch
cartesian_apc/cartesian_motor_control/scripts/: apc_controller_manager.py  controller_starter.py  dynamixel_resetter.py  gripper_node.py
cartesian_apc/cartesian_motor_control/src/: cartesian_motor_hw_interface.cpp  cartesian_motor_hw_main.cpp  test_trajectory.cpp
cartesian_apc/cartesian_motor_control/srv/: ChangeGrip.srv
cartesian_apc/moveit_lib/: CMakeLists.txt  package.xml
cartesian_apc/moveit_lib/include/: moveit_robot.h  moveit_robot_node.h
cartesian_apc/moveit_lib/parameters/: baxter_looking_into_bins_joint_states.forsrdf
cartesian_apc/moveit_lib/src/: moveit_robot.cpp  moveit_robot_node.cpp
cartesian_apc/moveit_lib/srv/: move_robot_named.srv  move_robot_pose.srv  move_robot_pose_array.srv  move_robot_pose_constrained.srv  move_robot_tf.srv
instructions/: Cartesian.md  README.md  RunEverything.md  Timeserver.md  camera_switch.md  network.md  qut-apc-base-setup-script.sh  qut-apc-vision-setup-instructions.md  running_the_robot_state_machine.md  train_data.md
(+244 files in other folders)
