<?xml version="1.0"?>
<package>
  <name>acrv_realsense_ros</name>
  <version>0.0.0</version>
  <description>A ROS wrapper for driving a RealSense SR300</description>
  <maintainer email="adam.tow@qut.edu.au">Adam Tow</maintainer>

  <license>BSD</license>

  <author email="james.sergeant@qut.edu.au">James Sergeant</author>
  <author email="c.lehnert@qut.edu.au">Chris Lehnert</author>
  <author email="adam.tow@qut.edu.au">Adam Tow</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>yaml-cpp</run_depend>
  <export>
  </export>
</package>
